Fix header fixed on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -262,6 +262,11 @@
     padding: 40px;
   }
 
+  /* Header */
+  .header.fixed {
+    top: -20px;
+  }
+
   .header .sign-up-btn {
     display: none;
   }
